finalizando o category type, e agora corrigindo css

--- a/backend/control/templates/base.html
+++ b/backend/control/templates/base.html
@@ -48,11 +48,6 @@
                 Ínicio
             </a>
 
-            <a href="{% url 'users' %}"
-                class="bg-zinc-900 hover:bg-zinc-700 cursor-pointer transition rounded-md font-semibold p-2 border-2 border-red-800">
-                Usuários
-            </a>
-
             <a href="{% url 'sessions' %}"
                 class="bg-zinc-900 hover:bg-zinc-700 cursor-pointer transition rounded-md font-semibold p-2 border-2 border-red-800">
                 Sessões
@@ -66,6 +61,16 @@
             <a href="{% url 'categories' %}"
                 class="bg-zinc-900 hover:bg-zinc-700 cursor-pointer transition rounded-md font-semibold p-2 border-2 border-red-800">
                 Categorias
+            </a>
+
+            <a href="{% url 'catg-types' %}"
+                class="bg-zinc-900 hover:bg-zinc-700 cursor-pointer transition rounded-md font-semibold p-2 border-2 border-red-800">
+                Tipos
+            </a>
+
+            <a href="{% url 'users' %}"
+                class="bg-zinc-900 hover:bg-zinc-700 cursor-pointer transition rounded-md font-semibold p-2 border-2 border-red-800">
+                Usuários
             </a>
 
             <a href="{% url 'user-logout' %}"
