--- a/backend/control/templates/category/categories.html
+++ b/backend/control/templates/category/categories.html
@@ -11,6 +11,8 @@
             
             {{ form.name }}
 
+            {{ form.category_type }}
+
             <button name="form_type" value="add_form" type="submit" class="w-40 mx-auto bg-green-800 hover:bg-green-600 p-2 rounded-sm text-white font-semibold cursor-pointer transition shadow-md">
                 Salvar
             </button>
@@ -30,6 +32,7 @@
             <thead>
                 <tr class="bg-zinc-950 font-semibold text-sm text-gray-400">
                     <th class="p-1">Nome da Categoria</th>
+                    <th class="p-1">Tipo</th>
                     <th class="p-1">Modificado em</th>
                     <th class="p-1">Por</th>
                     <th class="p-2">Ações</th>
@@ -39,6 +42,7 @@
                 {% for category in categories %}
                 <tr class="bg-zinc-900 hover:bg-zinc-800 transition cursor-pointer">
                     <td class="p-2">{{ category.name }}</td>
+                    <td class="p-2">{{ category.category_type }}</td>
                     <td class="p-2">{{ category.modified_at }}</td>
                     <td class="p-2">{{ category.modified_by }}</td>
                     <td class="p-2 flex flex-row justify-center items-center gap-2">
