--- a/backend/control/templates/user/user_login.html
+++ b/backend/control/templates/user/user_login.html
@@ -13,7 +13,7 @@
 
             {{ form.password }}
 
-            <button type="submit" class="w-full max-w-30 bg-green-800 hover:bg-green-600 rounded-sm shadow-md p-2">
+            <button type="submit" class="w-full max-w-30 bg-green-800 hover:bg-green-600 rounded-sm shadow-md p-2 transition cursor-pointer font-semibold">
                 Acessar
             </button>
         </form>
