--- a/backend/control/templates/base.html
+++ b/backend/control/templates/base.html
@@ -58,6 +58,11 @@
                 Filmes
             </a>
 
+            <a href="{% url 'genres' %}"
+                class="bg-zinc-900 hover:bg-zinc-700 cursor-pointer transition rounded-md font-semibold p-2 border-2 border-red-800">
+                Gêneros
+            </a>
+
             <a href="{% url 'categories' %}"
                 class="bg-zinc-900 hover:bg-zinc-700 cursor-pointer transition rounded-md font-semibold p-2 border-2 border-red-800">
                 Categorias
