--- a/backend/control/templates/film/films.html
+++ b/backend/control/templates/film/films.html
@@ -70,7 +70,7 @@
     <div id="list_div">
         <!-- Pesquisa do sistema -->
         <div class="bg-zinc-700 flex flex-col gap-2 text-center rounded-sm p-2 shadow-md">
-            <input id="search-files" type="search" placeholder="Procurar filme..." class="w-full max-w-md bg-zinc-800 rounded-sm p-2 shadow-md">
+            <input id="search-files" type="search" placeholder="Procurar filme..." class="w-full max-w-md bg-zinc-800 hover:bg-zinc-600 transition rounded-sm p-2 shadow-md">
         </div>
 
         <!-- Lista de filmes -->
