--- a/backend/control/templates/film/genres.html
+++ b/backend/control/templates/film/genres.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div class="w-4xl bg-zinc-900 mx-auto p-2 rounded-b-md space-y-2 shadow-md">
-    <!-- Adicionar tipo de categoria -->
+    <!-- Adicionar gênero -->
     <div class="bg-zinc-800 flex flex-col gap-2 text-center items-center rounded-sm p-2 shadow-md">
-        <h1 class="font-semibold">Adicionar novo Tipo de Categoria</h1>
+        <h1 class="font-semibold">Adicionar novo Gênero</h1>
 
         <form method="POST" class="flex flex-col gap-2 text-gray-500">
             {% csrf_token %}
@@ -19,38 +19,38 @@
 
     <!-- Pesquisa do sistema -->
     <div class="bg-zinc-700 flex flex-col gap-2 text-center rounded-sm p-2 shadow-md">
-        <input id="search-files" type="search" placeholder="Procurar tipo de categoria..." class="w-full max-w-md bg-zinc-800 hover:bg-zinc-600 transition rounded-sm p-2 shadow-md">
+        <input id="search-files" type="search" placeholder="Procurar por gênero..." class="w-full max-w-md bg-zinc-800 hover:bg-zinc-600 rounded-sm p-2 shadow-md">
     </div>
 
-    <!-- Lista de Tipos de Categorias -->
+    <!-- Lista de Categorias -->
     <div class="bg-zinc-700 flex flex-col gap-2 text-center items-center rounded-sm p-2 shadow-md">
-        <h1 class="font-semibold">Lista de Tipos de Categorias adicionadas</h1>
+        <h1 class="font-semibold">Lista de gêneros adicionadas</h1>
 
         <table class="w-full text-center">
             <thead>
                 <tr class="bg-zinc-950 font-semibold text-sm text-gray-400">
-                    <th class="p-1">Nome do Tipo</th>
+                    <th class="p-1">Nome da Categoria</th>
                     <th class="p-1">Modificado em</th>
                     <th class="p-1">Por</th>
                     <th class="p-2">Ações</th>
                 </tr>
             </thead>
             <tbody>
-                {% for type in c_types %}
+                {% for genre in genres %}
                 <tr class="bg-zinc-900 hover:bg-zinc-800 transition cursor-pointer">
-                    <td class="p-2">{{ type.name }}</td>
-                    <td class="p-2">{{ type.modified_at }}</td>
-                    <td class="p-2">{{ type.modified_by }}</td>
+                    <td class="p-2">{{ genre.name }}</td>
+                    <td class="p-2">{{ genre.modified_at }}</td>
+                    <td class="p-2">{{ genre.modified_by }}</td>
                     <td class="p-2 flex flex-row justify-center items-center gap-2">
-                        <!-- Link para a página de editar categoria -->
-                        <a href="{% url 'catg-type-edit' type.id %}" class="bg-green-800 hover:bg-green-600 p-2 rounded-sm cursor-pointer transition font-semibold">
+                        <!-- Link para a página de editar gênero -->
+                        <a href="{% url 'genre-edit' genre.id %}" class="bg-green-800 hover:bg-green-600 p-2 rounded-sm cursor-pointer transition font-semibold">
                             Editar
                         </a>
 
-                        <!-- Form pra deletar categoria -->
+                        <!-- Form pra deletar gênero -->
                         <form method="POST">
                         {% csrf_token %}
-                            <input type="number" class="hidden" name="c_type_id" value="{{ type.id }}">
+                            <input type="number" class="hidden" name="genre_id" value="{{ genre.id }}">
 
                             <button name="form_type" value="delete_form" class="bg-red-800 hover:bg-red-600 p-2 rounded-sm cursor-pointer transition font-semibold">
                                 Deletar
