--- a/backend/control/templates/session/session_edit.html
+++ b/backend/control/templates/session/session_edit.html
@@ -3,44 +3,66 @@
 {% block content %}
 <div class="w-4xl bg-zinc-900 mx-auto p-2 rounded-b-md space-y-2 shadow-md">
     <div class="flex flex-col bg-zinc-800 rounded-sm p-2 shadow-md">
-        <a href="{% url 'films' %}" class="w-20 text-center bg-blue-800 hover:bg-blue-600 transition font-semibold rounded-sm p-2 shadow-md">
+        <a href="{% url 'sessions' %}" class="w-20 text-center bg-blue-800 hover:bg-blue-600 transition font-semibold rounded-sm p-2 shadow-md">
             Voltar
         </a>
 
         <!-- Card para editar Sessão -->
         <div class="flex flex-col gap-2 text-center items-center">
-            <h1 class="font-semibold">Editar a sessão: {{ session.name }}</h1>
+            <h1 class="font-normal">
+                Editar a sessão:
+                <span class="font-semibold">{{ session.name }}</span>
+            </h1>
 
             <form method="POST" enctype="multipart/form-data" class="flex flex-col gap-2 text-gray-500">
                 {% csrf_token %}
-                
+
                 <div class="flex flex-row gap-4">
                     {{ form.name }}
 
                     {{ form.room }}
                 </div>
+                
+                <div class="flex flex-row gap-4">
+                    {{ form.week_day }}
 
-                <hr>
-
-                <div class="flex flex-row flex-wrap gap-4">
-                    {% for checkbox in form.days_list %}
-                        <label class="flex items-center gap-2">
-                            {{ checkbox.tag }}
-                            <span>{{ checkbox.choice_label }}</span>
-                        </label>
-                    {% endfor %}
+                    {{ form.time }}
                 </div>
 
                 <hr>
 
                 <div class="flex gap-4">
                     {% for radio in form.film %}
-                        <label class="flex items-center gap-4"">
+                        <label class="flex items-center gap-4 cursor-pointer">
                             {{ radio.tag }}
                             <span>{{ radio.choice_label }}</span>
                         </label>
                     {% endfor %}
                 </div>
+
+                <hr>
+                
+                {% for type, cats in grouped_catgs.items %}
+                    <div class="w-full">
+                        <h3 class="font-semibold">{{ type }}</h3>
+
+                        <div class="flex gap-2 flex-wrap">
+                            {% for cat in cats %}
+                                <label class="flex items-center gap-2 cursor-pointer">
+                                    <input type="checkbox"
+                                        name="categories"
+                                        value="{{ cat.id }}"
+                                        {% if cat in session.categories.all %}checked{% endif %}
+                                    >
+                                    <span>{{ cat.name }}</span>
+                                </label>
+                            {% endfor %}
+                        </div>
+                    </div>
+
+                    <hr>
+                {% endfor %}
+
 
                 <button type="submit" class="w-40 mx-auto bg-green-800 hover:bg-green-600 p-2 rounded-sm text-white font-semibold cursor-pointer transition shadow-md">
                     Salvar
