--- a/backend/control/templates/category/catg_type_edit.html
+++ b/backend/control/templates/category/catg_type_edit.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="w-4xl bg-zinc-900 mx-auto p-2 rounded-b-md space-y-2 shadow-md">
     <div class="flex flex-col bg-zinc-800 rounded-sm p-2 shadow-md">
-        <a href="{% url 'categories' %}" class="w-20 text-center bg-blue-800 hover:bg-blue-600 transition font-semibold rounded-sm p-2 shadow-md">
+        <a href="{% url 'catg-types' %}" class="w-20 text-center bg-blue-800 hover:bg-blue-600 transition font-semibold rounded-sm p-2 shadow-md">
             Voltar
         </a>
 
