--- a/backend/control/templates/user/user_login.html
+++ b/backend/control/templates/user/user_login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="flex justify-center">
     <div class="w-full max-w-lg bg-zinc-900 rounded-sm shadow-md mt-20 text-center p-2">
-        <h1 class="font-semibold m-2">Faça login para acessar o Painel de Controle</h1>
+        <h1 class="font-semibold m-2">Acessar Painel de Controle</h1>
         <br>
 
         <form method="POST" class="flex flex-col items-center gap-4">
@@ -22,7 +22,14 @@
         <hr class="border-gray-600 shadow-md">
         <br>
 
-        <p class="text-justify p-2">Se estiver com problemas para acessar o sistema ou precisa criar um usuário para acessar procure diretamente o administrador do sistema. Apenas ele pode criar e trocar senhas de usuários.</p>
+        <div class="flex flex-col text-center gap-4 p-2">
+            <h1 class="font-semibold text-blue-400">Problemas para acessar?</h1>
+            <p class="text-justify">Contate o administrador do sistema diretamente. Somente o administrador pode criar e excluir usuários, incluindo alterar senhas.</p>
+            
+            
+            <h1 class="font-semibold text-yellow-300 text-center">Para suporte especializado:</h1>
+            <p>bonéandicejhow@support.com</p>
+        </div>
     </div>
 </div>
 {% endblock %}
